--- a/SICSS_2024.ipynb
+++ b/SICSS_2024.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2083,6 +2084,33 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DFFng2wzKUu9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HoIa5iJ9Mcln"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "24c-o-kSG8HP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "zYA4ADepGGf5",
@@ -2343,7 +2371,21 @@
         "        data.append({'text_id': text_id, 'text': text})\n",
         "\n",
         "    # Print the first few entries to check\n",
-        "\n"
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "df_1 = pd.DataFrame(data)\n",
+        "\n",
+        "# Function to remove content within double square brackets\n",
+        "import re\n",
+        "def remove_bracketed_content(text):\n",
+        "    return re.sub(r'\\[\\[.*?\\]\\]', '', text)\n",
+        "\n",
+        "# Apply the function to the 'text' column\n",
+        "df_1['text'] = df_1['text'].apply(remove_bracketed_content)\n",
+        "\n",
+        "new_data=df.merge(df_1, left_on='Text_ID', right_on='text_id')"
       ],
       "metadata": {
         "id": "X7IpXiL2KWxa"
@@ -2353,12 +2395,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "\n",
-        "\n",
-        "df_1 = pd.DataFrame(data)"
-      ],
+      "source": [],
       "metadata": {
         "id": "72Vo3wFtKtyG"
       },
@@ -2376,10 +2413,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "new_data=df.merge(df_1, left_on='Text_ID', right_on='text_id')"
-      ],
+      "source": [],
       "metadata": {
         "id": "0HxEyVGQNoyz"
       },
@@ -2432,7 +2466,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "prob=[]\n",
+        "for i in range(len(new_data)):\n",
+        "\n",
+        "  prob.append(compute_probabilities(new_data['text'][i]))"
+      ],
       "metadata": {
         "id": "z4CHij2IbCNZ"
       },
@@ -2441,7 +2480,34 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import dask.dataframe as dd\n",
+        "from dask import delayed, compute\n",
+        "\n",
+        "import time\n",
+        "new_data_dd = dd.from_pandas(new_data.head(3), npartitions=8)  # Adjust npartitions based on your machine's cores\n",
+        "\n",
+        "# Define a delayed function to compute probabilities\n",
+        "@delayed\n",
+        "def compute_probabilities_delayed(text):\n",
+        "    return compute_probabilities(text)\n",
+        "\n",
+        "# Apply the function to the Dask DataFrame\n",
+        "prob_delayed = new_data_dd['text'].apply(compute_probabilities_delayed, meta=('text', 'f8'))\n",
+        "\n",
+        "start_time = time.time()\n",
+        "prob = compute(*prob_delayed.compute())\n",
+        "end_time = time.time()\n",
+        "\n",
+        "# Calculate the elapsed time\n",
+        "elapsed_time = end_time - start_time\n",
+        "\n",
+        "\n",
+        "# Print the elapsed time\n",
+        "print(f\"Time taken to run the computation: {elapsed_time:.2f} seconds\")\n",
+        "\n",
+        "# Flatten the list of results"
+      ],
       "metadata": {
         "id": "4iA5wqQbKUof"
       },
@@ -2450,20 +2516,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "sentence=new_data['text'][101]"
-      ],
-      "metadata": {
-        "id": "FFcycoBTKUsF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "len(new_data)"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2487,33 +2540,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "sentence"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 232
-        },
-        "id": "rbZ1z4RqUkGD",
-        "outputId": "16ad644d-a5c6-4912-8330-8e742b396551"
+        "id": "rbZ1z4RqUkGD"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Köszönöm a szót, elnök úr. Tisztelt Országgyűlés! Tisztelt Képviselő Úr! Ön hivatkozott Lázár úr mondataira. Azt gondolom, hogy abban nagy igazság van; nyilvánvalóan fontos dolog a pártpolitika, a politikai berendezkedésünk, a működési alapunkban jelentős szerepet szánt az élet a pártpolitikának. Ugyanakkor azt hozzátehetem, hozzáteszem, hogy nem a mi kormányunk önkormányzatokért felelős minisztere tett olyan kijelentést, amelyben a pártpolitikát helyezte az önkormányzatok támogatásában meghatározónak. Az önkormányzatok finanszírozása egyébként valóban régóta komoly viták kereszttüzében állt. Ha megnézzük az önkormányzati finanszírozást az elmúlt 24 évben, azt láthatjuk, hogy a 2000-es években jutottak el az önkormányzatok a működőképességük határáig. A 2000-es években, 2004-2005-től 2009-ig alakult ki az a nagyméretű adósságállomány, amelyről a képviselő úr is beszélt. Konkrétan Pécs esetében is 2005, 2006, 2007 voltak azok az évek, amikor a város leginkább eladósodott, és ezért kellett a kormányzatnak az adósságállományt átvállalni. Ha már az adósságról beszélt, képviselő úr, illetve beszélünk: az adósságátvállalás is rendkívül jó példája volt annak, hogy a kormányzat nem pártpolitikai színezet alapján vizsgálta az önkormányzatokat. Döntés született arról, hogy ahhoz, hogy az önkormányzatok a működőképességüket meg tudják őrizni, ahhoz, hogy a következő fejlesztési ciklusban fejleszteni legyenek képesek, az adósságukat át kell vállalni, és ez meg is történt. Minden önkormányzat, függetlenül a vezetés színétől, megszabadulhatott az adósságoktól. Pécs nyilván egy nehéz helyzetben lévő város. Nagyon sok feladatot vállalt. Például az Európa kulturális fővárosa feladatcsoportból nagyon sokat vállalt azért, hogy Magyarország hírnevét öregbítse. Ennek az intézményhálózatnak a fenntartása rendkívül komoly terhet ró a városra, és ez is okozza azt, hogy a város jelentős pénzügyi problémákkal küszködik. Az önkormányzati finanszírozás egy eleme a működőképesség megőrzését szolgáló támogatás. Alapvetően feladatfinanszírozás biztosítja az önkormányzatok működését. Amikor a feladatfinanszírozás kialakításra került, elmondta a kormányzat, elmondtuk azt, hogy az átmeneti időszakban nyilvánvalóan szükség lesz egy olyan kiegyenlítő rendszer működtetésére, amely az önkormányzatokat az átállás időszakán átsegíti. Már most látható, hogy ez a típusú külön támogatási igény kisebb, mint az ezt megelőző években, és az idén, most elfogadott jövő évi költségvetés korrekciói biztosítják azt, hogy a következő években az ilyen külön igények minél kisebbek legyenek. A működési célú támogatások odaítélése szakmai alapon történt. Alapvető és fontos dolog volt az, hogy működésre szolgálnak ezek a támogatások, nem fejlesztésre, nem önrészek kifizetésére, hiszen arra különböző alrendszereken keresztül megvannak a lehetőségek. A képviselő úrnak voltak konkrét említései is. Ilyen például Uszka önkormányzata. El kell mondani, hogy az év első felében 9,3 millió forint támogatást kapott, ami az akkori igényének a 90 százaléka volt, ezért ebben a második ütemben valóban kisebb támogatást kapott. Csörög esetében azért került megállapításra alacsonyabb támogatási összeg, mivel az önkormányzat kérelmének nagyobb részét fejlesztési igényekkel támasztotta alá. Összességében elmondhatom, hogy a bizottság egy szakmai álláspontot képviselt, és ez került elfogadásra. Köszönöm szépen, elnök úr. [[Taps a kormánypártok padsoraiból.]]'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 61
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
