--- a/SICSS_2024.ipynb
+++ b/SICSS_2024.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -2073,16 +2072,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/stesstesste/SICSS_2024/blob/main/SICSS_2024.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -2379,13 +2368,15 @@
         "\n",
         "# Function to remove content within double square brackets\n",
         "import re\n",
-        "def remove_bracketed_content(text):\n",
-        "    return re.sub(r'\\[\\[.*?\\]\\]', '', text)\n",
+        "# def remove_bracketed_content(text):\n",
+        "#     return re.sub(r'\\[\\[.*?\\]\\]', '', text)\n",
         "\n",
         "# Apply the function to the 'text' column\n",
-        "df_1['text'] = df_1['text'].apply(remove_bracketed_content)\n",
+        "# df_1['text'] = df_1['text'].apply(remove_bracketed_content)\n",
         "\n",
-        "new_data=df.merge(df_1, left_on='Text_ID', right_on='text_id')"
+        "new_data=df.merge(df_1, left_on='Text_ID', right_on='text_id')\n",
+        "\n",
+        "new_data = new_data[new_data['Lang'] != 'Chairperson']\n"
       ],
       "metadata": {
         "id": "X7IpXiL2KWxa"
@@ -2397,37 +2388,73 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "72Vo3wFtKtyG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ra8rvXsNSdEG",
+        "outputId": "19275890-17a0-4165-8b2c-6de0b713b07e"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1      Regular\n",
+              "3      Regular\n",
+              "5      Regular\n",
+              "7      Regular\n",
+              "9        Guest\n",
+              "        ...   \n",
+              "175    Regular\n",
+              "177    Regular\n",
+              "179    Regular\n",
+              "181    Regular\n",
+              "183    Regular\n",
+              "Name: Lang, Length: 91, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "new_data[\"Lang\"]"
+      ],
       "metadata": {
-        "id": "dynKdcwZLGnd"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D36_sdCKR3FW",
+        "outputId": "19ceeab7-3894-4666-bfe2-c8d6202e9899"
       },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "0HxEyVGQNoyz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "k2-VjrOLLQcY"
-      },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0      Chairperson\n",
+              "1          Regular\n",
+              "2      Chairperson\n",
+              "3          Regular\n",
+              "4      Chairperson\n",
+              "          ...     \n",
+              "180    Chairperson\n",
+              "181        Regular\n",
+              "182    Chairperson\n",
+              "183        Regular\n",
+              "184    Chairperson\n",
+              "Name: Lang, Length: 185, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2452,11 +2479,11 @@
         "\n",
         "  return probabilities\n",
         "\n",
-        "dask_df = dd.from_pandas(new_data.head(10), npartitions=50)\n",
+        "#ask_df = dd.from_pandas(new_data.head(10), npartitions=50)\n",
         "\n",
-        "dask_df['probabilities'] = dask_df['text'].apply(lambda x: delayed(compute_probabilities)(x), meta=('x', 'object'))\n",
+        "#dask_df['probabilities'] = dask_df['text'].apply(lambda x: delayed(compute_probabilities)(x), meta=('x', 'object'))\n",
         "\n",
-        "result = dask_df.compute()"
+        "#result = dask_df.compute()"
       ],
       "metadata": {
         "id": "Vmbr0HmNKUSo"
@@ -2466,12 +2493,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "prob=[]\n",
-        "for i in range(len(new_data)):\n",
-        "\n",
-        "  prob.append(compute_probabilities(new_data['text'][i]))"
-      ],
+      "source": [],
       "metadata": {
         "id": "z4CHij2IbCNZ"
       },
@@ -2484,7 +2506,7 @@
         "import dask.dataframe as dd\n",
         "from dask import delayed, compute\n",
         "\n",
-        "import time\n",
+        "\n",
         "new_data_dd = dd.from_pandas(new_data.head(3), npartitions=8)  # Adjust npartitions based on your machine's cores\n",
         "\n",
         "# Define a delayed function to compute probabilities\n",
@@ -2496,20 +2518,105 @@
         "prob_delayed = new_data_dd['text'].apply(compute_probabilities_delayed, meta=('text', 'f8'))\n",
         "\n",
         "start_time = time.time()\n",
-        "prob = compute(*prob_delayed.compute())\n",
+        "# Compute the results\n",
+        "prob = compute(prob_persisted)\n",
         "end_time = time.time()\n",
+        "\n",
         "\n",
         "# Calculate the elapsed time\n",
         "elapsed_time = end_time - start_time\n",
         "\n",
-        "\n",
-        "# Print the elapsed time\n",
         "print(f\"Time taken to run the computation: {elapsed_time:.2f} seconds\")\n",
         "\n",
         "# Flatten the list of results"
       ],
       "metadata": {
         "id": "4iA5wqQbKUof"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_data_dd = dd.from_pandas(new_data[:5], npartitions=8)  # Adjust npartitions based on your machine's cores\n",
+        "\n",
+        "# Define a delayed function to compute probabilities\n",
+        "@delayed\n",
+        "def compute_probabilities_delayed(text):\n",
+        "    return compute_probabilities(text)\n",
+        "# Use map_partitions for better performance with large DataFrames\n",
+        "prob_delayed = new_data_dd.map_partitions(lambda df: df['text'].apply(compute_probabilities_delayed), meta=('text', 'f8'))\n",
+        "\n",
+        "# Persist the intermediate results in memory\n",
+        "prob_persisted = prob_delayed.persist()\n",
+        "\n",
+        "start_time = time.time()\n",
+        "# Compute the results\n",
+        "prob = compute(prob_persisted)\n",
+        "end_time = time.time()\n",
+        "\n",
+        "# Calculate the elapsed time\n",
+        "elapsed_time = end_time - start_time\n",
+        "\n",
+        "print(f\"Time taken to run the computation: {elapsed_time:.2f} seconds\")"
+      ],
+      "metadata": {
+        "id": "Tpk041HLTPdP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hktobq3JTPfn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0sz_gwrBTPh2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1TnAHFfmTPj5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HqGL89poTPmP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xWK_v1kZTPod"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "X9Hrq7heTPqd"
       },
       "execution_count": null,
       "outputs": []
